--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,9 @@
-:root {
-  // base
-  --black: #232323;
-  --background: #ffdf8c;
-  --gray-line: #f6f6f6;
-  --orange: #fe5f1e;
+$black: #232323;
+$background: #ffdf8c;
+$gray-line: #f6f6f6;
+$orange: #fe5f1e;
 
-  --container-width: 90%;
+$container-width: 90%;
 
-  --duration: 0.15s;
-}
+$duration: 0.15s;
+
