--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,15 +6,20 @@
 
 body {
   background-color: $background;
+  background-image: url("../assets/img/background.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .wrapper {
   width: calc(100vw - 50px);
-  height: 100%;
+  min-height: calc(100vh - 100px);
   background-color: #fff;
   margin: 50px auto;
   border-radius: 10px;
-  max-width: 1400px;
+  max-width: 1560px;
 }
 
 .content {
